# arcdemo

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  invoke.yaml  pyproject.toml
.github/workflows/: check.yml  publish.yml
confs/: config.yaml  generation.yaml
data/: call_logs.csv  call_logs_prepared.csv
notebooks/: explore_call_point_generation.ipynb  explore_data_preparation.ipynb
src/arcdemo/: __init__.py  __main__.py
src/arcdemo/components/: data_generation.py  data_preparation.py
src/arcdemo/config/: configuration.py
src/arcdemo/constants/: __init__.py
src/arcdemo/entity/: config_entity.py
src/arcdemo/pipeline/: stage_01_data_generation.py  stage_02_data_preparation.py
src/arcdemo/utils/: common.py
tests/: test_configuration.py  test_data_generation.py  test_data_preparation.py  test_scripts.py  test_utils.py
